--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,20 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                 xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                     https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+                 version="6.0">
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <display-name>my-webapp-project</display-name>
+
+    <servlet>
+        <servlet-name>TasksServlet</servlet-name>
+        <servlet-class>com.example.todo.servlet.TasksServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>TasksServlet</servlet-name>
+        <url-pattern>/api/tasks/*</url-pattern>
+    </servlet-mapping>
+
 </web-app>
